<resources>

    <string name="app_name">Popup Places</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">Popup Places</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="newplacedialog_text">Enter Popup Note:</string>
    <string name="delete">Delete</string>
    <string name="okay">Okay</string>
    <string name="about_title">About</string>

    <string-array name="about_items">
        <item>Author: Rory Glynn\nFollow Rory on Google+</item>
        <item>The Popup Places Blog</item>
        <item>Popup Places on Github</item>
    </string-array>
    <string-array name="about_links">
        <item>http://j.mp/V8Yrdt</item>
        <item>http://j.mp/THFlO3</item>
        <item>http://j.mp/Qtmjvt</item>
        <item>lemon</item>
    </string-array>

    <string name="about_request">Request A Feature</string>
    <string name="email_request">REQUEST:</string>
    <string name="about_report">Report A Bug</string>
    <string name="email_report">REPORT:</string>
    <string name="email_popupplaces_address">PopupPlaces@appz.ie</string>
    <string name="version_number_">"Version Number: "</string>
    <string name="edit">Edit</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_disable_notifications">Disable Notifications</string>
    <string name="menu_title_center_map_on_me">Center Map On Me</string>
    <string name="menu_title_read_out_popups">Read Out Popups</string>
    <string name="user_intruction_1">Long-press anywhere on the map to add a Popup Place!</string>
    <string name="settingspage_highvalue">150m</string>
    <string name="settingspage_explaintext">Having a larger Pop Radius reduces the battery power
        used by Popup Places.
    </string>
    <string name="settingspage_lowvalue">20m</string>
    <string name="settingspage_popradius">Pop Radius:</string>
    <string name="settings_title">Settings</string>
    <string name="menu_settings">Settings</string>

</resources>