<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_DisableService"
            android:checkable="true"
            android:orderInCategory="0"
            android:showAsAction="never"
            android:title="@string/menu_title_disable_notifications"/>
    <item
            android:id="@+id/action_search"
            android:actionViewClass="com.actionbarsherlock.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"
            android:orderInCategory="97"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/menu_title_search"/>

    <item
            android:id="@+id/menu_ReadAloud"
            android:checkable="true"
            android:orderInCategory="98"
            android:showAsAction="never"
            android:title="@string/menu_title_read_out_popups"
            android:titleCondensed="Read Popups"/>
    <item
            android:id="@+id/menu_Settings"
            android:orderInCategory="99"
            android:showAsAction="never"
            android:title="@string/menu_settings"/>
    <item
            android:id="@+id/menu_About"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_about"/>

</menu>