<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settingspage_popradius"
            android:id="@+id/popRadiusText"
            android:layout_gravity="left|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>


    <RelativeLayout
            android:layout_below="@+id/popRadiusText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/seekbarLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settingspage_lowvalue"
                android:layout_alignParentTop="true"
                />

        <SeekBar
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_marginTop="31dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settingspage_highvalue"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
            android:layout_below="@+id/seekbarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settingspage_explaintext"
            android:id="@+id/textView4"/>

</RelativeLayout>
